fix mobile nav overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -102,6 +102,7 @@
     flex-direction: column;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
   }
 
   a {
